# cursed-timer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  history.csv
.github/workflows/: release.yml
src/: app.rs  config.rs  countdown.rs  history.rs  main.rs  scramble.rs  stats.rs  timer.rs  ui.rs
src/ui/: draw.rs  draw_confirm_dialog.rs  draw_help.rs  draw_idle.rs  draw_inspecting.rs  draw_timer.rs  draw_timer_active.rs  draw_timer_inactive.rs  mod.rs
